--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="mainBox">
                     <h1 class="mainBoxHeader">Shivansh Dhar</h1>
                     <h3>software engineer</h3>
-                    <h3>builds cool stuff</h3>
+                    <h3>builds things</h3>
                     <h3>loves learning</h3>
                     <ul class="iconList">
                         <li>
